--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
 body{
     margin: 0;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;    
+    
 }
 
 h1{
@@ -25,6 +26,11 @@ ul{
 li{
     font-size: 1.25em;
 }
+.color-acento{
+    color: blue;
+}
+
+
 button{
     font-size: 1.5em;
     font-weight: bold;
@@ -39,6 +45,9 @@ button{
 button:hover{
     background-color: rgb(44, 3, 228);
     color: orange;
+
+  
+    
 }
 
 .container{
@@ -76,3 +85,40 @@ header a{
 header a:hover{
     color: blueviolet;
 }
+
+#hero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 90vh;
+    background-image:   
+    linear-gradient(
+        0deg,
+        rgb(114, 48, 48,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("../images/portadaginobiliacru2.jpg");
+    color: aliceblue;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-transform:uppercase;
+    
+}
+
+#hero h1{
+    color: bisque;
+}
+
+#somos-iq .container{
+    text-align: center;
+    padding: 200px 12px;
+
+}
+
+
+
+
+
+
